--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,23 @@
+body{
+    background-color: #333333;
+}
+
 .wrapper {
     display: flex;
 }
 
 .canvas {
-    margin: auto;
-    background-color: darkgrey;
-    width: 1300px;
-    height: 700px;
+    background-color: #bbbbbb;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70vw;
+    outline-width: 4px;
+    outline-color: red;
+}
+
+text {
+    fill: #fff;
+    font-size: 4rem;
+    font-family: sans-serif;
 }
