--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,15 @@
 body{
-    background-color: #333333;
 }
 
 .wrapper {
-    display: flex;
+    width: 100%; height: 100%; top: 0; left: 0;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .canvas {
-    background-color: #bbbbbb;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70vw;
-    outline-width: 4px;
-    outline-color: red;
 }
 
 text {
