--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,35 @@
-body{
+* {
+    box-sizing: border-box;
 }
 
-.wrapper {
-    width: 100%; height: 100%; top: 0; left: 0;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-
+.page:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
-.canvas {
-    align-content: center;
+.first-column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 600px;
+    background-color: gray;
 }
 
-.region:hover {
-    color: #e54c3c;
+.second-column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 600px;
+    background-color: lightgray;
 }
 
-text {
-    fill: #fff;
-    font-size: 4rem;
-    font-family: sans-serif;
+#wrapper {
+    height: 90%;
+    background-color: dodgerblue;
+}
+
+#scale {
+    height: 10%;
+    background-color: red;
 }
