--- a/css/style.css
+++ b/css/style.css
@@ -16,56 +16,60 @@
     background-color: lightgray;
 }
 
-button {
-    background-color: #4CAF50; /* Green */
-    border: 2px solid #4CAF50;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-}
+/*button {*/
+/*    background-color: #4CAF50; !* Green *!*/
+/*    border: 2px solid #4CAF50;*/
+/*    color: white;*/
+/*    padding: 16px 32px;*/
+/*    text-align: center;*/
+/*    text-decoration: none;*/
+/*    display: inline-block;*/
+/*    font-size: 16px;*/
+/*    margin: 4px 2px;*/
+/*    transition-duration: 0.4s;*/
+/*    cursor: pointer;*/
+/*}*/
 
-button:hover {
-    background-color: white;
-    color: #4CAF50;
-    border: 2px solid #4CAF50;
-}
+/*button:disabled:hover {*/
+/*    background-color: #7c818b;*/
+/*}*/
 
-.slider {
-    -webkit-appearance: none;
-    width: 50%;
-    height: 15px;
-    border-radius: 5px;
-    background: #d3a051;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-}
+/*button:hover {*/
+/*    background-color: white;*/
+/*    color: #4CAF50;*/
+/*    border: 2px solid #4CAF50;*/
+/*}*/
 
-.slider:hover {
-    opacity: 1;
-}
+/*.slider {*/
+/*    -webkit-appearance: none;*/
+/*    width: 50%;*/
+/*    height: 15px;*/
+/*    border-radius: 5px;*/
+/*    background: #d3a051;*/
+/*    outline: none;*/
+/*    opacity: 0.7;*/
+/*    -webkit-transition: .2s;*/
+/*    transition: opacity .2s;*/
+/*}*/
 
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #4CAF50;
-    cursor: pointer;
-}
+/*.slider:hover {*/
+/*    opacity: 1;*/
+/*}*/
 
-.slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #4CAF50;
-    cursor: pointer;
-}
+/*.slider::-webkit-slider-thumb {*/
+/*    -webkit-appearance: none;*/
+/*    appearance: none;*/
+/*    width: 25px;*/
+/*    height: 25px;*/
+/*    border-radius: 50%;*/
+/*    background: #4CAF50;*/
+/*    cursor: pointer;*/
+/*}*/
+
+/*.slider::-moz-range-thumb {*/
+/*    width: 25px;*/
+/*    height: 25px;*/
+/*    border-radius: 50%;*/
+/*    background: #4CAF50;*/
+/*    cursor: pointer;*/
+/*}*/
