--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@
 .gui {
     width: 60%;
     background-color: lightgray;
+    flex-direction: column;
+}
+
+.controlPanel {
+    height: 20%;
+    background-color: #32b3d3;
 }
 
 #speedRange {
